Recipe listings spacing fix.

--- a/public/styles/modules/recipe-listings.less
+++ b/public/styles/modules/recipe-listings.less
@@ -122,7 +122,7 @@
 
   @media(min-width: @bp-m5-min) {
     width: 100%;
-    margin-top: @spacing-l1;
+    margin-top: @spacing;
     margin-left: 0;
   }
 }
